# OptiX-Path-Tracer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
FinalChapter/: CMakeLists.txt  Camera.h  Material.h
FinalChapter/programs/: miss.cu  prd.h  raygen.cu  sphere.cu
FinalChapter_iterative/: CMakeLists.txt  finalChapter.cpp
FinalChapter_iterative/programs/: CuRandState.h  DRand48.h  dielectric.cu  lambertian.cu  metal.cu  miss.cu  prd.h  raygen.cu
FinalChapter_recursive/: CMakeLists.txt  finalChapter.cpp  savePPM.h
FinalChapter_recursive/programs/: dielectric.cu  lambertian.cu  material.h  metal.cu  prd.h  raygen.cu  sampling.h  vec.h
OptiX-Path-Tracer/: CMakeLists.txt  main.cpp
OptiX-Path-Tracer/host_includes/: buffers.h  buffers.hpp  camera.h  camera.hpp  gui.h  gui.hpp  hitables.h  hitables.hpp  host_common.hpp  image_save.hpp  materials.h  materials.hpp  mesh.hpp  pdfs.h  pdfs.hpp  programs.h  programs.hpp  scene_parser.h  scene_parser.hpp  scenes.h  scenes.hpp  textures.h  textures.hpp  transforms.h  transforms.hpp
OptiX-Path-Tracer/lib/: HDRloader.cpp  HDRloader.h  OBJ_Loader.h  RSJparser.tcc  hdr_reader.cpp  hdr_reader.h  stb_image.h
OptiX-Path-Tracer/programs/: DRand48.h  XorShift32.h  common.h  common.hpp  exception.cu  hit.cu  math_solvers.h  miss.cu  onb.h  prd.cuh  prd.h  random.h  raygen.cu  raygen.cuh  sampling.cuh  sampling.h  trigonometric.cuh  trigonometric.h  vec.h  vec.hpp
OptiX-Path-Tracer/programs/hitables/: aarect.cu  box.cu  cone.cu  cylinder.cu  geometry_triangles.cu  hitables.cuh  mesh.cu  moving_sphere.cu  plane.cu  sphere.cu  spheres.cuh  torus.cu  triangle.cu  triangle.cuh  volume_box.cu  volume_sphere.cu
OptiX-Path-Tracer/programs/materials/: anisotropic_phong.cu  ashikhmin_shirley.cu  ashikhmin_shirley.cuh  dielectric.cu  diffuse_light.cu  diffuse_light.cuh  disney.cu  disney.cuh  isotropic.cu  isotropic.cuh  lambertian.cu  lambertian.cuh  light_sample.cuh  material.cuh  material.h  metal.cu  microfacet_glass.cu  microfacet_glass.cuh  microfacet_transmission.cu  microfacets.cuh  normal_shader.cu  oren_nayar.cu  oren_nayar.cuh  torrance_sparrow.cu  torrance_sparrow.cuh  volumes.cu
OptiX-Path-Tracer/programs/math/: math_commons.cuh  trigonometric.cuh
OptiX-Path-Tracer/programs/pdfs/: buffer_pdf.cu  cosine_pdf.cu  mixture_pdf.cu  pdf.cuh  pdf.h  rect_pdf.cu  sphere_pdf.cu
OptiX-Path-Tracer/programs/textures/: checkered_texture.cu  constant_texture.cu  gradient_texture.cu  image_texture.cu  noise_texture.cu  texture.cuh  texture.h  vector.cu
cmake/: FindOptiX.cmake  configure_optix.cmake
